--- a/css/simple_graph.css
+++ b/css/simple_graph.css
@@ -16,6 +16,9 @@ input[type="radio"] {
     height: auto;
     padding: 10px;
     background-color: rgba(255,255,255,0.5);
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
 }
 #tooltip.hidden {
     display: none;
